--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Multi - Multipurpose Bootstrap theme</title>
+    <title>DreamFish镜像站</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="robots" content="all,follow">
@@ -85,7 +85,7 @@
       <div class="container py-5 text-white text-center">
         <h1 class="text-shadow hero-heading">让找镜像，不再成为绊脚石&nbsp;</h1>
         <p class="text-shadow lead my-4">&nbsp; </p>
-        <p><a href="#" class="btn btn-outline-light btn-sm">种类多，不限速，全免费</a></p>
+        <p><a href="#" class="btn-outline-light btn-sm">种类多，不限速，全免费</a></p>
         <p><a href="#" class="btn btn-outline-light btn-sm">&nbsp;打开所有镜像下载列表</a> </p>
         <p>&nbsp;</p>
       </div>
@@ -106,30 +106,22 @@
             <h3 class="h5">MacOS镜像</h3>
             <h3 class="h5">&nbsp;</h3>
 <p class="text-small">&nbsp;MacOS，源自苹果的操作系统，以优雅设计、流畅体验、强大功能，为用户展现独特魅力。界面简洁直观，操作便捷高效，软件生态丰富，创新功能层出不穷，让你的Mac成为你工作娱乐的得力助手。</p>
-          <span><a href="https://www.123pan.com/s/OmZbVv-ayAD3.html" class="btn btn-lg btn-outline-primary rounded-pill mx-1">下载列表
+<a href="https://www.123pan.com/s/OmZbVv-ayAD3.html">访问下载列表</a>
           </div>
           <div class="col-lg-4 mb-4 mb-lg-0"><a href="#" class="d-block"></a>
             <h3 class="h5 mb-4">Linux镜像&nbsp;</h3>
             <p class="text-small">Linux内核系统，强大而稳定，为众多操作系统提供核心支撑。其开源特性促进了全球开发者的协作与创新，实现高效资源管理，保障系统安全。Linux内核，以其卓越性能和灵活性，赢得了广泛赞誉。&nbsp;</p>
-          <span><a href="https://www.123pan.com/s/OmZbVv-fyAD3.html" class="btn btn-lg btn-outline-primary rounded-pill mx-1">下载列表
+<a href="https://www.123pan.com/s/OmZbVv-fyAD3.html">访问下载列表</a>
 			  
 			  </a></span>
           </div>
-          <div class="col-lg-4 col-xl-3"><a href="#" class="d-block"></a>
-            <h3 class="h5 mb-4"><a href="#" class="text-dark">远古系统镜像&nbsp;</a></h3>
-            <p class="text-small">古老的系统，承载着历史的记忆，虽已过时，却仍散发出独特的韵味。它们见证了技术的变迁，记录着时代的脚步。虽不如现代系统便捷，但那份古朴与纯真，却让人心生敬意，难以忘怀。&nbsp;</p>
-          <span><a href="https://www.123pan.com/s/OmZbVv-ByAD3.html" class="btn btn-lg btn-outline-primary rounded-pill mx-1">下载列表
-          </div>
-        </div>
-      </div>
-    </section>
-<section>
-  <div>
-	  <h5>&nbsp;2024 DreamFishSoftware&nbsp;</h5>
-			>
+  <div class="col-lg-4 col-xl-4"><a href="#" class="d-block"></a>
+    <h3 class="h5 mb-4"><a href="#" class="text-dark">远古系统镜像&nbsp;</a></h3>
+    <p class="text-small">承载着历史的记忆，虽已过时，却仍散发出独特的韵味。它们见证了技术的变迁，记录着时代的脚步。虽不如现代系统便捷，但那份古朴与纯真，却让人心生敬意，难以忘怀。&nbsp;</p>
+<a href="https://www.123pan.com/s/OmZbVv-ByAD3.html">访问下载列表</a>
+    </div>
 
-  </div>
-  </section>
+
 <!-- JavaScript files-->
     <script src="vendor/jquery/jquery.min.js"></script>
     <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
