--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
         <h2 class="mb-4">Windows镜像&nbsp;</h2>
         <p class="lead">Windows系统，来自微软的强大操作系统，广泛应用于全球的个人电脑。凭借其丰富的功能和广泛的软件支持，Windows系统为用户提供了高效的工作和娱乐体验。无论你是一个游戏爱好者还是专业人士，Windows都能满足你的需求，让你尽情享受电脑带来的便利和乐趣。&nbsp;</p>
         <p class="text-small">&nbsp;</p>
-        <p><a href="#">&nbsp;</a><a href="#" class="btn btn-outline-primary btn-sm">下载列表</a></p>
+<a href="https://www.123pan.com/s/OmZbVv-WfAD3.html">访问下载列表</a>
         <p>&nbsp; </p>
       </div>
     </section>
