--- a/index.html
+++ b/index.html
@@ -108,6 +108,8 @@
     <p class="text-small">承载着历史的记忆，虽已过时，却仍散发出独特的韵味。它们见证了技术的变迁，记录着时代的脚步。虽不如现代系统便捷，但那份古朴与纯真，却让人心生敬意，难以忘怀。&nbsp;</p>
 <a href="https://www.123pan.com/s/OmZbVv-ByAD3.html">访问下载列表</a>
     </div>
+		<h3>由NSP2102,赵某人共同建站。喜欢的在下载界面打个赏呗～ QwQ </h3>
+		<h3>Powered By NSP2102 ZhaoMouRen.If you like this website,go to the download page and sponsor us thanks!</h3>
 
 
 <!-- JavaScript files-->
