--- a/index.html
+++ b/index.html
@@ -83,7 +83,8 @@
         <h2 class="mb-4">Windows镜像&nbsp;</h2>
         <p class="lead">Windows系统，来自微软的强大操作系统，广泛应用于全球的个人电脑。凭借其丰富的功能和广泛的软件支持，Windows系统为用户提供了高效的工作和娱乐体验。无论你是一个游戏爱好者还是专业人士，Windows都能满足你的需求，让你尽情享受电脑带来的便利和乐趣。&nbsp;</p>
         <p class="text-small">&nbsp;</p>
-<a href="https://www.123pan.com/s/OmZbVv-WfAD3.html">访问下载列表</a>
+<a href="https://www.123pan.com/s/OmZbVv-WfAD3.html">访问下载列表</a> |  <a href="https://www.123pan.com/s/OmZbVv-iNQD3.html">Windows系统实用工具下载
+		  </a>
         <p>&nbsp; </p>
       </div>
     </section>
@@ -108,6 +109,10 @@
     <p class="text-small">承载着历史的记忆，虽已过时，却仍散发出独特的韵味。它们见证了技术的变迁，记录着时代的脚步。虽不如现代系统便捷，但那份古朴与纯真，却让人心生敬意，难以忘怀。&nbsp;</p>
 <a href="https://www.123pan.com/s/OmZbVv-ByAD3.html">访问下载列表</a>
     </div>
+<div class="div_foot">
+        &copy;2023——2024 DreamFishOfficial 版权所有All Right Reserved.
+    </div>
+
 
 
 <!-- JavaScript files-->
