--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
 <a href="https://www.123pan.com/s/OmZbVv-ByAD3.html">访问下载列表</a>
     </div>
 <div class="div_foot">
-        &copy;2023——2024 DreamFishOfficial 版权所有All Right Reserved.
+        &copy;2023——2024 DreamFishOfficial 版权所有All Right Reserved.nsp2102搭建本站 赵某人提供资源 zyh2102赞助资金为服务器扩容至2048gb
     </div>
 
 
