--- a/index.html
+++ b/index.html
@@ -103,16 +103,111 @@
 <a href="https://www.123pan.com/s/OmZbVv-fyAD3.html">访问下载列表</a>
 			  
 			  </a></span>
-          </div>
-  <div class="col-lg-4 col-xl-4"><a href="#" class="d-block"></a>
-    <h3 class="h5 mb-4"><a href="#" class="text-dark">远古系统镜像&nbsp;</a></h3>
-    <p class="text-small">承载着历史的记忆，虽已过时，却仍散发出独特的韵味。它们见证了技术的变迁，记录着时代的脚步。虽不如现代系统便捷，但那份古朴与纯真，却让人心生敬意，难以忘怀。&nbsp;</p>
-<a href="https://www.123pan.com/s/OmZbVv-ByAD3.html">访问下载列表</a>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <title>底部</title>
+</head>
+<body>
+<footer>
+    <div class="footer-nav">
+        
+        </ul>
     </div>
-<div class="div_foot">
-        &copy;2023——2024 DreamFishOfficial 版权所有All Right Reserved.nsp2102搭建本站 赵某人提供资源 zyh2102赞助资金为服务器扩容至2048gb
+ 
+    <div class="footer-info">
+        <p>© 2024 NSP DreamFish Offical Limited Company. All rights reserved.</p>
+        <p><a href="">隐私政策</a> | <a href="">使用条款</a> | <a href="">常见问题</a></p>
     </div>
-
+    <div class="footer-social">
+        <ul>
+            <li><a href=""><i class="fab fa-facebook-f"></i></a></li>
+            <li><a href=""><i class="fab fa-twitter"></i></a></li>
+            <li><a href=""><i class="fab fa-instagram"></i></a></li>
+        </ul>
+    </div>
+    <div class="footer-contact">
+        <p>联系我们：nishaopeng1@outlook.com</p>
+        <p>电话：133-8161-0028</p>
+    </div>
+    <div class="footer-back-to-top">
+        <a href="">返回顶部</a>
+    </div>
+</footer>
+<!--css部分-->
+<style>
+    /* 底部整体样式 */
+    footer {
+        background-color: #f2f2f2;
+        padding: 20px;
+        text-align: center;
+    }
+ 
+    /* 导航链接样式 */
+    .footer-nav ul {
+        list-style-type: none;
+        padding: 0;
+    }
+ 
+    .footer-nav ul li {
+        display: inline-block;
+        margin-right: 10px;
+    }
+ 
+    .footer-nav ul li a {
+        text-decoration: none;
+        color: #333;
+    }
+ 
+    /* 版权信息样式 */
+    .footer-info {
+        margin: 10px 0;
+    }
+ 
+    .footer-info p {
+        font-size: 12px;
+        color: #888;
+    }
+ 
+    /* 社交媒体链接样式 */
+    .footer-social ul {
+        list-style-type: none;
+        padding: 0;
+    }
+ 
+    .footer-social ul li {
+        display: inline-block;
+        margin-right: 10px;
+    }
+ 
+    .footer-social ul li a {
+        text-decoration: none;
+        color: #333;
+        font-size: 18px;
+    }
+ 
+    /* 联系信息样式 */
+    .footer-contact p {
+        font-size: 12px;
+        color: #888;
+        margin: 5px 0;
+    }
+ 
+    /* 返回顶部按钮样式 */
+    .footer-back-to-top a {
+        text-decoration: none;
+        color: #333;
+        font-size: 12px;
+    }
+ 
+    .footer-back-to-top a:hover {
+        text-decoration: underline;
+    }
+</style>
+ 
+</body>
+</html>
 
 
 <!-- JavaScript files-->
