--- a/index.html
+++ b/index.html
@@ -4,20 +4,20 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Dreamfish资源站</title>
+    <title>𝑪𝑳𝑶𝑼𝑫 Website</title>
     <!-- Bootstrap -->
     <link href="css/bootstrap-4.4.1.css" rel="stylesheet">
   </head>
   <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-      <a class="navbar-brand" href="#">由NSP2102建站，赵某人提供资源，ZYH2102赞助本站云盘升级至2T！[本站资源已占用305.02GB]</a>
+      <a class="navbar-brand" href="#">Made By 𝑪𝑳𝑶𝑼𝑫ᵀᵉᵃᵐ</a>
     </nav>
     <div class="container mt-2">
       <div class="row">
         <div class="col-12">
           <div class="jumbotron">
             <h1 class="text-center">一体化内容整合，在线网盘无需登录下载&nbsp;</h1>
-<p class="text-center">集合了系统镜像/装机必备软件/纯净PE制作器/MC辅助/刷机资源等内容，无广告无捆绑，无需下载不限速！</p>
+<p class="text-center">集合了系统镜像/装机必备软件/纯净PE制作器/Minecraft辅助/刷机资源等内容，无广告无捆绑，无需下载不限速！</p>
      
           </div>
         </div>
