--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       <div class="row">
         <div class="col-12">
           <div class="jumbotron">
-            <h1 class="text-center">一体化内容整合，在线网盘无需登录下载&nbsp;</h1>
+            <h1 class="text-center">一体化内容整合，123网盘无需登录下载&nbsp;</h1>
 <p class="text-center">集合了系统镜像/装机必备软件/纯净PE制作器/Minecraft辅助/刷机资源等内容，无广告无捆绑，无需下载不限速！</p>
      
           </div>
@@ -62,7 +62,7 @@
       <div class="container">
         <div class="row">
           <div class="col-12">
-            <p>Copyright 2023-2024 © Sweet_Cloud Studio. All rights reserved.</p>
+            <p>Copyright 2023-2024 © Cloud Team. All rights reserved.</p>
           </div>
         </div>
       </div>
