--- a/index.html
+++ b/index.html
@@ -1,1 +1,1 @@
- <meta http-equiv="refresh" content="0;url= http://nsp.framer.ai/ ">
+ <meta http-equiv="refresh" content="0;url=https://b_eKIVFNtgjoc.v0.build/ ">
