--- a/index.html
+++ b/index.html
@@ -1,1 +1,1 @@
- <meta http-equiv="refresh" content="0;url=https://b_eKIVFNtgjoc.v0.build/ ">
+ <meta http-equiv="refresh" content="0;url=https://b_2FHEuPSZ9ol.v0.build/ ">
