--- a/index.html
+++ b/index.html
@@ -1,1 +1,7 @@
- <meta http-equiv="refresh" content="0;url=https://nsp.framer.ai/">
+<!DOCTYPE html>
+<html lang="en">
+<head>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Fish.</title>
+<meta http-equiv="refresh" content="0;url=https://nsp.framer.ai/">
